p5/src/c1.output
Terminals unused in grammar

   EOL
   F


状态 83 conflicts: 22 reduce/reduce
状态 84 conflicts: 19 reduce/reduce
状态 85 conflicts: 19 reduce/reduce


语法

    0 $accept: golbal $end

    1 golbal: CompUnit

    2 CompUnit: CompUnit Decl
    3         | CompUnit FuncDef
    4         | Decl
    5         | FuncDef

    6 Decl: ConstDecl
    7     | VarDecl

    8 ConstDecl: CONST INT MultiConstDef SEMICOLON
    9          | CONST MultiConstDef SEMICOLON

   10 MultiConstDef: MultiConstDef COMMA ConstDef
   11              | ConstDef

   12 ConstDef: ID EQ Exp
   13         | ID LBRACKET Exp RBRACKET EQ LBRACE MultiExp RBRACE
   14         | ID LBRACKET RBRACKET EQ LBRACE MultiExp RBRACE

   15 MultiExp: MultiExp COMMA Exp
   16         | Exp

   17 VarDecl: INT MultiVar SEMICOLON

   18 MultiVar: MultiVar COMMA Var
   19         | Var

   20 Var: ID
   21    | ID LBRACKET Exp RBRACKET
   22    | ID EQ Exp
   23    | ID LBRACKET Exp RBRACKET EQ LBRACE MultiExp RBRACE
   24    | ID LBRACKET RBRACKET EQ LBRACE MultiExp RBRACE

   25 FuncDef: VOID ID LPAR RPAR Block
   26        | VOID ID LPAR Block
   27        | VOID ID RPAR Block

   28 Block: LBRACE MultiBlockItem RBRACE
   29      | LBRACE RBRACE

   30 MultiBlockItem: MultiBlockItem BlockItem
   31               | BlockItem

   32 BlockItem: Decl
   33          | Stmt

   34 Stmt: LVal EQ Exp SEMICOLON
   35     | ID LPAR RPAR SEMICOLON
   36     | ID LPAR SEMICOLON
   37     | ID RPAR SEMICOLON
   38     | Block
   39     | IFStmt
   40     | WHILEStmt
   41     | SEMICOLON

   42 WHILEStmt: WHILECOND Stmt

   43 WHILECOND: WHILE LPAR Cond RPAR
   44          | WHILE LPAR Cond
   45          | WHILE Cond RPAR

   46 IFStmt: IFCOND Stmt ELSE Stmt
   47       | IFCOND Stmt

   48 IFCOND: IF LPAR Cond RPAR
   49       | IF LPAR Cond
   50       | IF Cond RPAR

   51 LVal: ID
   52     | ID LBRACKET Exp RBRACKET

   53 Cond: Exp LT Exp
   54     | Exp ISEQ Exp
   55     | Exp LE Exp
   56     | Exp GT Exp
   57     | Exp GE Exp
   58     | Exp NE Exp

   59 Exp: Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp MULT Exp
   62    | Exp DIV Exp
   63    | Exp MOD Exp
   64    | Exp Exp
   65    | PLUS Exp
   66    | MINUS Exp
   67    | NUMBER
   68    | LVal
   69    | LPAR Exp RPAR
   70    | LPAR Exp
   71    | Exp RPAR


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 67
ID (259) 12 13 14 20 21 22 23 24 25 26 27 35 36 37 51 52
PLUS (260) 59 65
MINUS (261) 60 66
MULT (262) 61
DIV (263) 62
MOD (264) 63
EQ (265) 12 13 14 22 23 24 34
ISEQ (266) 54
GT (267) 56
LT (268) 53
LE (269) 55
NE (270) 58
GE (271) 57
UMINUS (272)
EOL (273)
LPAR (274) 25 26 35 36 43 44 48 49 69 70
RPAR (275) 25 27 35 37 43 45 48 50 69 71
LBRACE (276) 13 14 23 24 28 29
RBRACE (277) 13 14 23 24 28 29
LBRACKET (278) 13 14 21 23 24 52
RBRACKET (279) 13 14 21 23 24 52
INT (280) 8 17
SEMICOLON (281) 8 9 17 34 35 36 37 41
COMMA (282) 10 15 18
CONST (283) 8 9
WHILE (284) 43 44 45
IF (285) 48 49 50
ELSE (286) 46
VOID (287) 25 26 27
A (288)
F (289)
nonelse (290)


Nonterminals, with rules where they appear

$accept (36)
    左： 0
golbal (37)
    左： 1, 右： 0
CompUnit (38)
    左： 2 3 4 5, 右： 1 2 3
Decl (39)
    左： 6 7, 右： 2 4 32
ConstDecl (40)
    左： 8 9, 右： 6
MultiConstDef (41)
    左： 10 11, 右： 8 9 10
ConstDef (42)
    左： 12 13 14, 右： 10 11
MultiExp (43)
    左： 15 16, 右： 13 14 15 23 24
VarDecl (44)
    左： 17, 右： 7
MultiVar (45)
    左： 18 19, 右： 17 18
Var (46)
    左： 20 21 22 23 24, 右： 18 19
FuncDef (47)
    左： 25 26 27, 右： 3 5
Block (48)
    左： 28 29, 右： 25 26 27 38
MultiBlockItem (49)
    左： 30 31, 右： 28 30
BlockItem (50)
    左： 32 33, 右： 30 31
Stmt (51)
    左： 34 35 36 37 38 39 40 41, 右： 33 42 46 47
WHILEStmt (52)
    左： 42, 右： 40
WHILECOND (53)
    左： 43 44 45, 右： 42
IFStmt (54)
    左： 46 47, 右： 39
IFCOND (55)
    左： 48 49 50, 右： 46 47
LVal (56)
    左： 51 52, 右： 34 68
Cond (57)
    左： 53 54 55 56 57 58, 右： 43 44 45 48 49 50
Exp (58)
    左： 59 60 61 62 63 64 65 66 67 68 69 70 71, 右： 12 13 15
    16 21 22 23 34 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 69
    70 71


State 0

    0 $accept: . golbal $end

    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 3

    golbal     转到状态 4
    CompUnit   转到状态 5
    Decl       转到状态 6
    ConstDecl  转到状态 7
    VarDecl    转到状态 8
    FuncDef    转到状态 9


State 1

   17 VarDecl: INT . MultiVar SEMICOLON

    ID  shift, and go to state 10

    MultiVar  转到状态 11
    Var       转到状态 12


State 2

    8 ConstDecl: CONST . INT MultiConstDef SEMICOLON
    9          | CONST . MultiConstDef SEMICOLON

    ID   shift, and go to state 13
    INT  shift, and go to state 14

    MultiConstDef  转到状态 15
    ConstDef       转到状态 16


State 3

   25 FuncDef: VOID . ID LPAR RPAR Block
   26        | VOID . ID LPAR Block
   27        | VOID . ID RPAR Block

    ID  shift, and go to state 17


State 4

    0 $accept: golbal . $end

    $end  shift, and go to state 18


State 5

    1 golbal: CompUnit .
    2 CompUnit: CompUnit . Decl
    3         | CompUnit . FuncDef

    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (golbal)

    Decl       转到状态 19
    ConstDecl  转到状态 7
    VarDecl    转到状态 8
    FuncDef    转到状态 20


State 6

    4 CompUnit: Decl .

    $default  reduce using rule 4 (CompUnit)


State 7

    6 Decl: ConstDecl .

    $default  reduce using rule 6 (Decl)


State 8

    7 Decl: VarDecl .

    $default  reduce using rule 7 (Decl)


State 9

    5 CompUnit: FuncDef .

    $default  reduce using rule 5 (CompUnit)


State 10

   20 Var: ID .
   21    | ID . LBRACKET Exp RBRACKET
   22    | ID . EQ Exp
   23    | ID . LBRACKET Exp RBRACKET EQ LBRACE MultiExp RBRACE
   24    | ID . LBRACKET RBRACKET EQ LBRACE MultiExp RBRACE

    EQ        shift, and go to state 21
    LBRACKET  shift, and go to state 22

    $default  reduce using rule 20 (Var)


State 11

   17 VarDecl: INT MultiVar . SEMICOLON
   18 MultiVar: MultiVar . COMMA Var

    SEMICOLON  shift, and go to state 23
    COMMA      shift, and go to state 24


State 12

   19 MultiVar: Var .

    $default  reduce using rule 19 (MultiVar)


State 13

   12 ConstDef: ID . EQ Exp
   13         | ID . LBRACKET Exp RBRACKET EQ LBRACE MultiExp RBRACE
   14         | ID . LBRACKET RBRACKET EQ LBRACE MultiExp RBRACE

    EQ        shift, and go to state 25
    LBRACKET  shift, and go to state 26


State 14

    8 ConstDecl: CONST INT . MultiConstDef SEMICOLON

    ID  shift, and go to state 13

    MultiConstDef  转到状态 27
    ConstDef       转到状态 16


State 15

    9 ConstDecl: CONST MultiConstDef . SEMICOLON
   10 MultiConstDef: MultiConstDef . COMMA ConstDef

    SEMICOLON  shift, and go to state 28
    COMMA      shift, and go to state 29


State 16

   11 MultiConstDef: ConstDef .

    $default  reduce using rule 11 (MultiConstDef)


State 17

   25 FuncDef: VOID ID . LPAR RPAR Block
   26        | VOID ID . LPAR Block
   27        | VOID ID . RPAR Block

    LPAR  shift, and go to state 30
    RPAR  shift, and go to state 31


State 18

    0 $accept: golbal $end .

    $default  接受


State 19

    2 CompUnit: CompUnit Decl .

    $default  reduce using rule 2 (CompUnit)


State 20

    3 CompUnit: CompUnit FuncDef .

    $default  reduce using rule 3 (CompUnit)


State 21

   22 Var: ID EQ . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 38


State 22

   21 Var: ID LBRACKET . Exp RBRACKET
   23    | ID LBRACKET . Exp RBRACKET EQ LBRACE MultiExp RBRACE
   24    | ID LBRACKET . RBRACKET EQ LBRACE MultiExp RBRACE

    NUMBER    shift, and go to state 32
    ID        shift, and go to state 33
    PLUS      shift, and go to state 34
    MINUS     shift, and go to state 35
    LPAR      shift, and go to state 36
    RBRACKET  shift, and go to state 39

    LVal  转到状态 37
    Exp   转到状态 40


State 23

   17 VarDecl: INT MultiVar SEMICOLON .

    $default  reduce using rule 17 (VarDecl)


State 24

   18 MultiVar: MultiVar COMMA . Var

    ID  shift, and go to state 10

    Var  转到状态 41


State 25

   12 ConstDef: ID EQ . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 42


State 26

   13 ConstDef: ID LBRACKET . Exp RBRACKET EQ LBRACE MultiExp RBRACE
   14         | ID LBRACKET . RBRACKET EQ LBRACE MultiExp RBRACE

    NUMBER    shift, and go to state 32
    ID        shift, and go to state 33
    PLUS      shift, and go to state 34
    MINUS     shift, and go to state 35
    LPAR      shift, and go to state 36
    RBRACKET  shift, and go to state 43

    LVal  转到状态 37
    Exp   转到状态 44


State 27

    8 ConstDecl: CONST INT MultiConstDef . SEMICOLON
   10 MultiConstDef: MultiConstDef . COMMA ConstDef

    SEMICOLON  shift, and go to state 45
    COMMA      shift, and go to state 29


State 28

    9 ConstDecl: CONST MultiConstDef SEMICOLON .

    $default  reduce using rule 9 (ConstDecl)


State 29

   10 MultiConstDef: MultiConstDef COMMA . ConstDef

    ID  shift, and go to state 13

    ConstDef  转到状态 46


State 30

   25 FuncDef: VOID ID LPAR . RPAR Block
   26        | VOID ID LPAR . Block

    RPAR    shift, and go to state 47
    LBRACE  shift, and go to state 48

    Block  转到状态 49


State 31

   27 FuncDef: VOID ID RPAR . Block

    LBRACE  shift, and go to state 48

    Block  转到状态 50


State 32

   67 Exp: NUMBER .

    $default  reduce using rule 67 (Exp)


State 33

   51 LVal: ID .
   52     | ID . LBRACKET Exp RBRACKET

    LBRACKET  shift, and go to state 51

    $default  reduce using rule 51 (LVal)


State 34

   65 Exp: PLUS . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 52


State 35

   66 Exp: MINUS . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 53


State 36

   69 Exp: LPAR . Exp RPAR
   70    | LPAR . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 54


State 37

   68 Exp: LVal .

    $default  reduce using rule 68 (Exp)


State 38

   22 Var: ID EQ Exp .
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   71    | Exp . RPAR

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    MULT    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    LPAR    shift, and go to state 36
    RPAR    shift, and go to state 60

    $default  reduce using rule 22 (Var)

    LVal  转到状态 37
    Exp   转到状态 61


State 39

   24 Var: ID LBRACKET RBRACKET . EQ LBRACE MultiExp RBRACE

    EQ  shift, and go to state 62


State 40

   21 Var: ID LBRACKET Exp . RBRACKET
   23    | ID LBRACKET Exp . RBRACKET EQ LBRACE MultiExp RBRACE
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   71    | Exp . RPAR

    NUMBER    shift, and go to state 32
    ID        shift, and go to state 33
    PLUS      shift, and go to state 55
    MINUS     shift, and go to state 56
    MULT      shift, and go to state 57
    DIV       shift, and go to state 58
    MOD       shift, and go to state 59
    LPAR      shift, and go to state 36
    RPAR      shift, and go to state 60
    RBRACKET  shift, and go to state 63

    LVal  转到状态 37
    Exp   转到状态 61


State 41

   18 MultiVar: MultiVar COMMA Var .

    $default  reduce using rule 18 (MultiVar)


State 42

   12 ConstDef: ID EQ Exp .
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   71    | Exp . RPAR

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    MULT    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    LPAR    shift, and go to state 36
    RPAR    shift, and go to state 60

    $default  reduce using rule 12 (ConstDef)

    LVal  转到状态 37
    Exp   转到状态 61


State 43

   14 ConstDef: ID LBRACKET RBRACKET . EQ LBRACE MultiExp RBRACE

    EQ  shift, and go to state 64


State 44

   13 ConstDef: ID LBRACKET Exp . RBRACKET EQ LBRACE MultiExp RBRACE
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   71    | Exp . RPAR

    NUMBER    shift, and go to state 32
    ID        shift, and go to state 33
    PLUS      shift, and go to state 55
    MINUS     shift, and go to state 56
    MULT      shift, and go to state 57
    DIV       shift, and go to state 58
    MOD       shift, and go to state 59
    LPAR      shift, and go to state 36
    RPAR      shift, and go to state 60
    RBRACKET  shift, and go to state 65

    LVal  转到状态 37
    Exp   转到状态 61


State 45

    8 ConstDecl: CONST INT MultiConstDef SEMICOLON .

    $default  reduce using rule 8 (ConstDecl)


State 46

   10 MultiConstDef: MultiConstDef COMMA ConstDef .

    $default  reduce using rule 10 (MultiConstDef)


State 47

   25 FuncDef: VOID ID LPAR RPAR . Block

    LBRACE  shift, and go to state 48

    Block  转到状态 66


State 48

   28 Block: LBRACE . MultiBlockItem RBRACE
   29      | LBRACE . RBRACE

    ID         shift, and go to state 67
    LBRACE     shift, and go to state 48
    RBRACE     shift, and go to state 68
    INT        shift, and go to state 1
    SEMICOLON  shift, and go to state 69
    CONST      shift, and go to state 2
    WHILE      shift, and go to state 70
    IF         shift, and go to state 71

    Decl            转到状态 72
    ConstDecl       转到状态 7
    VarDecl         转到状态 8
    Block           转到状态 73
    MultiBlockItem  转到状态 74
    BlockItem       转到状态 75
    Stmt            转到状态 76
    WHILEStmt       转到状态 77
    WHILECOND       转到状态 78
    IFStmt          转到状态 79
    IFCOND          转到状态 80
    LVal            转到状态 81


State 49

   26 FuncDef: VOID ID LPAR Block .

    $default  reduce using rule 26 (FuncDef)


State 50

   27 FuncDef: VOID ID RPAR Block .

    $default  reduce using rule 27 (FuncDef)


State 51

   52 LVal: ID LBRACKET . Exp RBRACKET

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 82


State 52

   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   65    | PLUS Exp .
   71    | Exp . RPAR

    MULT  shift, and go to state 57
    DIV   shift, and go to state 58
    MOD   shift, and go to state 59

    $default  reduce using rule 65 (Exp)

    LVal  转到状态 37
    Exp   转到状态 61


State 53

   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   66    | MINUS Exp .
   71    | Exp . RPAR

    MULT  shift, and go to state 57
    DIV   shift, and go to state 58
    MOD   shift, and go to state 59

    $default  reduce using rule 66 (Exp)

    LVal  转到状态 37
    Exp   转到状态 61


State 54

   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   69    | LPAR Exp . RPAR
   70    | LPAR Exp .
   71    | Exp . RPAR

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    MULT    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    LPAR    shift, and go to state 36
    RPAR    shift, and go to state 83

    $default  reduce using rule 70 (Exp)

    LVal  转到状态 37
    Exp   转到状态 61


State 55

   59 Exp: Exp PLUS . Exp
   65    | PLUS . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 84


State 56

   60 Exp: Exp MINUS . Exp
   66    | MINUS . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 85


State 57

   61 Exp: Exp MULT . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 86


State 58

   62 Exp: Exp DIV . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 87


State 59

   63 Exp: Exp MOD . Exp

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 36

    LVal  转到状态 37
    Exp   转到状态 88


State 60

   71 Exp: Exp RPAR .

    $default  reduce using rule 71 (Exp)


State 61

   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   64    | Exp Exp .
   71    | Exp . RPAR

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    MULT    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    LPAR    shift, and go to state 36
    RPAR    shift, and go to state 60

    $default  reduce using rule 64 (Exp)

    LVal  转到状态 37
    Exp   转到状态 61


State 62

   24 Var: ID LBRACKET RBRACKET EQ . LBRACE MultiExp RBRACE

    LBRACE  shift, and go to state 89


State 63

   21 Var: ID LBRACKET Exp RBRACKET .
   23    | ID LBRACKET Exp RBRACKET . EQ LBRACE MultiExp RBRACE

    EQ  shift, and go to state 90

    $default  reduce using rule 21 (Var)


State 64

   14 ConstDef: ID LBRACKET RBRACKET EQ . LBRACE MultiExp RBRACE

    LBRACE  shift, and go to state 91


State 65

   13 ConstDef: ID LBRACKET Exp RBRACKET . EQ LBRACE MultiExp RBRACE

    EQ  shift, and go to state 92


State 66

   25 FuncDef: VOID ID LPAR RPAR Block .

    $default  reduce using rule 25 (FuncDef)


State 67

   35 Stmt: ID . LPAR RPAR SEMICOLON
   36     | ID . LPAR SEMICOLON
   37     | ID . RPAR SEMICOLON
   51 LVal: ID .
   52     | ID . LBRACKET Exp RBRACKET

    LPAR      shift, and go to state 93
    RPAR      shift, and go to state 94
    LBRACKET  shift, and go to state 51

    $default  reduce using rule 51 (LVal)


State 68

   29 Block: LBRACE RBRACE .

    $default  reduce using rule 29 (Block)


State 69

   41 Stmt: SEMICOLON .

    $default  reduce using rule 41 (Stmt)


State 70

   43 WHILECOND: WHILE . LPAR Cond RPAR
   44          | WHILE . LPAR Cond
   45          | WHILE . Cond RPAR

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 95

    LVal  转到状态 37
    Cond  转到状态 96
    Exp   转到状态 97


State 71

   48 IFCOND: IF . LPAR Cond RPAR
   49       | IF . LPAR Cond
   50       | IF . Cond RPAR

    NUMBER  shift, and go to state 32
    ID      shift, and go to state 33
    PLUS    shift, and go to state 34
    MINUS   shift, and go to state 35
    LPAR    shift, and go to state 98

    LVal  转到状态 37
    Cond  转到状态 99
    Exp   转到状态 97


State 72

   32 BlockItem: Decl .

    $default  reduce using rule 32 (BlockItem)


State 73

   38 Stmt: Block .

    $default  reduce using rule 38 (Stmt)


State 74

   28 Block: LBRACE MultiBlockItem . RBRACE
   30 MultiBlockItem: MultiBlockItem . BlockItem

    ID         shift, and go to state 67
    LBRACE     shift, and go to state 48
    RBRACE     shift, and go to state 100
    INT        shift, and go to state 1
    SEMICOLON  shift, and go to state 69
    CONST      shift, and go to state 2
    WHILE      shift, and go to state 70
    IF         shift, and go to state 71

    Decl       转到状态 72
    ConstDecl  转到状态 7
    VarDecl    转到状态 8
    Block      转到状态 73
    BlockItem  转到状态 101
    Stmt       转到状态 76
    WHILEStmt  转到状态 77
    WHILECOND  转到状态 78
    IFStmt     转到状态 79
    IFCOND     转到状态 80
    LVal       转到状态 81


State 75

   31 MultiBlockItem: BlockItem .

    $default  reduce using rule 31 (MultiBlockItem)


State 76

   33 BlockItem: Stmt .

    $default  reduce using rule 33 (BlockItem)


State 77

   40 Stmt: WHILEStmt .

    $default  reduce using rule 40 (Stmt)


State 78

   42 WHILEStmt: WHILECOND . Stmt

    ID         shift, and go to state 67
    LBRACE     shift, and go to state 48
    SEMICOLON  shift, and go to state 69
    WHILE      shift, and go to state 70
    IF         shift, and go to state 71

    Block      转到状态 73
    Stmt       转到状态 102
    WHILEStmt  转到状态 77
    WHILECOND  转到状态 78
    IFStmt     转到状态 79
    IFCOND     转到状态 80
    LVal       转到状态 81


State 79

   39 Stmt: IFStmt .

    $default  reduce using rule 39 (Stmt)


State 80

   46 IFStmt: IFCOND . Stmt ELSE Stmt
   47       | IFCOND . Stmt

    ID         shift, and go to state 67
    LBRACE     shift, and go to state 48
    SEMICOLON  shift, and go to state 69
    WHILE      shift, and go to state 70
    IF         shift, and go to state 71

    Block      转到状态 73
    Stmt       转到状态 103
    WHILEStmt  转到状态 77
    WHILECOND  转到状态 78
    IFStmt     转到状态 79
    IFCOND     转到状态 80
    LVal       转到状态 81


State 81

   34 Stmt: LVal . EQ Exp SEMICOLON

    EQ  shift, and go to state 104


State 82

   52 LVal: ID LBRACKET Exp . RBRACKET
   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   71    | Exp . RPAR

    NUMBER    shift, and go to state 32
    ID        shift, and go to state 33
    PLUS      shift, and go to state 55
    MINUS     shift, and go to state 56
    MULT      shift, and go to state 57
    DIV       shift, and go to state 58
    MOD       shift, and go to state 59
    LPAR      shift, and go to state 36
    RPAR      shift, and go to state 60
    RBRACKET  shift, and go to state 105

    LVal  转到状态 37
    Exp   转到状态 61


State 83

   69 Exp: LPAR Exp RPAR .
   71    | Exp RPAR .

    NUMBER     reduce using rule 69 (Exp)
    NUMBER     [reduce using rule 71 (Exp)]
    ID         reduce using rule 69 (Exp)
    ID         [reduce using rule 71 (Exp)]
    PLUS       reduce using rule 69 (Exp)
    PLUS       [reduce using rule 71 (Exp)]
    MINUS      reduce using rule 69 (Exp)
    MINUS      [reduce using rule 71 (Exp)]
    MULT       reduce using rule 69 (Exp)
    MULT       [reduce using rule 71 (Exp)]
    DIV        reduce using rule 69 (Exp)
    DIV        [reduce using rule 71 (Exp)]
    MOD        reduce using rule 69 (Exp)
    MOD        [reduce using rule 71 (Exp)]
    ISEQ       reduce using rule 69 (Exp)
    ISEQ       [reduce using rule 71 (Exp)]
    GT         reduce using rule 69 (Exp)
    GT         [reduce using rule 71 (Exp)]
    LT         reduce using rule 69 (Exp)
    LT         [reduce using rule 71 (Exp)]
    LE         reduce using rule 69 (Exp)
    LE         [reduce using rule 71 (Exp)]
    NE         reduce using rule 69 (Exp)
    NE         [reduce using rule 71 (Exp)]
    GE         reduce using rule 69 (Exp)
    GE         [reduce using rule 71 (Exp)]
    LPAR       reduce using rule 69 (Exp)
    LPAR       [reduce using rule 71 (Exp)]
    RPAR       reduce using rule 69 (Exp)
    RPAR       [reduce using rule 71 (Exp)]
    LBRACE     reduce using rule 69 (Exp)
    LBRACE     [reduce using rule 71 (Exp)]
    RBRACE     reduce using rule 69 (Exp)
    RBRACE     [reduce using rule 71 (Exp)]
    RBRACKET   reduce using rule 69 (Exp)
    RBRACKET   [reduce using rule 71 (Exp)]
    SEMICOLON  reduce using rule 69 (Exp)
    SEMICOLON  [reduce using rule 71 (Exp)]
    COMMA      reduce using rule 69 (Exp)
    COMMA      [reduce using rule 71 (Exp)]
    WHILE      reduce using rule 69 (Exp)
    WHILE      [reduce using rule 71 (Exp)]
    IF         reduce using rule 69 (Exp)
    IF         [reduce using rule 71 (Exp)]
    $default   reduce using rule 69 (Exp)


State 84

   59 Exp: Exp . PLUS Exp
   59    | Exp PLUS Exp .
   60    | Exp . MINUS Exp
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   65    | PLUS Exp .
   71    | Exp . RPAR

    MULT  shift, and go to state 57
    DIV   shift, and go to state 58
    MOD   shift, and go to state 59

    NUMBER     reduce using rule 59 (Exp)
    NUMBER     [reduce using rule 65 (Exp)]
    ID         reduce using rule 59 (Exp)
    ID         [reduce using rule 65 (Exp)]
    PLUS       reduce using rule 59 (Exp)
    PLUS       [reduce using rule 65 (Exp)]
    MINUS      reduce using rule 59 (Exp)
    MINUS      [reduce using rule 65 (Exp)]
    ISEQ       reduce using rule 59 (Exp)
    ISEQ       [reduce using rule 65 (Exp)]
    GT         reduce using rule 59 (Exp)
    GT         [reduce using rule 65 (Exp)]
    LT         reduce using rule 59 (Exp)
    LT         [reduce using rule 65 (Exp)]
    LE         reduce using rule 59 (Exp)
    LE         [reduce using rule 65 (Exp)]
    NE         reduce using rule 59 (Exp)
    NE         [reduce using rule 65 (Exp)]
    GE         reduce using rule 59 (Exp)
    GE         [reduce using rule 65 (Exp)]
    LPAR       reduce using rule 59 (Exp)
    LPAR       [reduce using rule 65 (Exp)]
    RPAR       reduce using rule 59 (Exp)
    RPAR       [reduce using rule 65 (Exp)]
    LBRACE     reduce using rule 59 (Exp)
    LBRACE     [reduce using rule 65 (Exp)]
    RBRACE     reduce using rule 59 (Exp)
    RBRACE     [reduce using rule 65 (Exp)]
    RBRACKET   reduce using rule 59 (Exp)
    RBRACKET   [reduce using rule 65 (Exp)]
    SEMICOLON  reduce using rule 59 (Exp)
    SEMICOLON  [reduce using rule 65 (Exp)]
    COMMA      reduce using rule 59 (Exp)
    COMMA      [reduce using rule 65 (Exp)]
    WHILE      reduce using rule 59 (Exp)
    WHILE      [reduce using rule 65 (Exp)]
    IF         reduce using rule 59 (Exp)
    IF         [reduce using rule 65 (Exp)]
    $default   reduce using rule 59 (Exp)

    LVal  转到状态 37
    Exp   转到状态 61


State 85

   59 Exp: Exp . PLUS Exp
   60    | Exp . MINUS Exp
   60    | Exp MINUS Exp .
   61    | Exp . MULT Exp
   62    | Exp . DIV Exp
   63    | Exp . MOD Exp
   64    | Exp . Exp
   66    | MINUS Exp .
   71    | Exp . RPAR

    MULT  shift, and go to state 57
    DIV   shift, and go to state 58
    MOD   shift, and go to state 59
